# TenSEAL

./: CMakeLists.txt
bootstrap_config/: __init__.py  ckksrns_fhe.py  ckksrns_fhe_consts.py
bootstrap_enums/: __init__.py  degree_bounds_enum.py  secret_key_dist_enum.py
bootstrap_utils/: __init__.py  ckksrns_utils.py
cmake/: seal.cmake
examples/: bootstrapper_medium_ckks_my_test.py  bootstrapper_medium_gpt_ckks_my_test.py  bootstrapper_simple_bfv_my_test.py  bootstrapper_simple_ckks_my_test.py  bootstrapping-example-my-test.py  bootstrapping_example_bfv_my_test.py  bootstrapping_example_ckks_my_test.py  bootstrapping_example_medium_ckks_my_test.py  bootstrapping_example_medium_gpt_my_test.py  bootstrapping_example_simple_bfv_my_test.py  bootstrapping_example_simple_ckks_my_test.py  delete_me_test.py  matrix-product-bfv-my-test.py  matrix-product-ckks-my-test.py  vector-addition-bfv-my-test.py  vector-addition-ckks-my-test.py  vector-product-bfv-my-test.py  vector-product-ckks-my-test.py
tutorials/: Tutorial 0 - Getting Started.ipynb  Tutorial 1 - Training and Evaluation of Logistic Regression on Encrypted Data.ipynb  Tutorial 2 - Working with Approximate Numbers.ipynb
tutorials/experimental/: Convolution.ipynb
